<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/header_reply"
        android:icon="@drawable/ic_baseline_turn_left_24"
        android:title="@string/reply" />
    <item
        android:id="@+id/header_copy"
        android:icon="@drawable/ic_baseline_content_copy_24"
        android:title="@string/copy" />
    <item
        android:id="@+id/header_forward"
        android:icon="@drawable/ic_baseline_turn_right_24"
        android:title="@string/forward" />

    <item
        android:id="@+id/header_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit" />

    <item
        android:id="@+id/header_delete"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:title="@string/delete" />

</menu>