<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.fragments.app.SettingsFragment">

        <com.example.scorpiochat.ui.components.ComponentSetProfilePicture
            android:id="@+id/component_set_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_confirm"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_check_24" />

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_cancel_24" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/change_username"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/change_email"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/reset_password"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/sign_out"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/delete_account"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txt_change_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/change_language"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/notifications"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/change_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/change_theme"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>

