<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".ui.fragments.login.CreateAccountFragment">

        <com.example.scorpiochat.ui.components.ComponentSetProfilePicture
            android:id="@+id/component_set_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_cancel_24" />


        <EditText
            android:id="@+id/editTxt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="20"
            android:text="" />

        <EditText
            android:id="@+id/editTxt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="" />

        <EditText
            android:id="@+id/editTxt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="" />

        <EditText
            android:id="@+id/editTxt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/confirm_password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:text="" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>
