<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.scorpiochat.ui.fragments.app.ChatsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_chats">
        <action
            android:id="@+id/action_nav_home_to_addContactFragment"
            app:destination="@id/addContactFragment" />
        <action
            android:id="@+id/action_nav_home_to_conversationFragment"
            app:destination="@id/conversationFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/conversationFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
        <argument
            android:name="forwardMessage"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.scorpiochat.ui.fragments.app.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about_app"
        android:name="com.example.scorpiochat.ui.fragments.app.AboutAppFragment"
        android:label="@string/about_app"
        tools:layout="@layout/fragment_about_app" />
    <fragment
        android:id="@+id/addContactFragment"
        android:name="com.example.scorpiochat.ui.fragments.app.AddContactFragment"
        android:label="@string/search_contact"
        tools:layout="@layout/fragment_add_contact">
        <action
            android:id="@+id/action_addContactFragment_to_conversationFragment"
            app:destination="@id/conversationFragment" />
        <argument
            android:name="forwardMessage"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/conversationFragment"
        android:name="com.example.scorpiochat.ui.fragments.app.ConversationFragment"
        android:label="fragment_conversation"
        tools:layout="@layout/fragment_conversation">
        <argument
            android:name="userId"
            app:argType="string" />
        <action
            android:id="@+id/action_conversationFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="forwardMessage"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>